--- a/documentation/installation.stories.mdx
+++ b/documentation/installation.stories.mdx
@@ -40,7 +40,7 @@ To get started quickly just import a two `.css` files from [jsDelivr](https://ww
 
 ### Denali
 
-This CDN link includes everything you see documented in Denali CSS components, layouts, resets, and helpers. Please note this CDN link does not include the [Denali Icon Font](https://github.com/denali-design/denali-icon-font) library.
+This CDN link includes everything you see documented in Denali CSS components, layouts, resets, and helpers. Please note this CDN link does not include the [Denali Icon Font](https://github.com/denali-design/denali-icons) library.
 
 ```
 https://cdn.jsdelivr.net/npm/denali-css/css/denali.css
@@ -63,11 +63,25 @@ Add these link tags into the head of your HTML document for easy Installation.
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/denali-css/css/denali.css">
 ```
 
+### Using Denali Icons & Fonts via NPM
+
+### Install
+
+```
+npm install @denali-design/icons
+```
+
+### Import
+
+After installation, you can import the CSS file into your js project using the code below.
+
+```
+import '@denali-design/icons/dist/font/denali-icons-font.css';
+```
+
 ---
 
-### via NPM
-
-## Using Denali via NPM
+### Using Denali CSS via NPM
 
 For most projects we recommend installing Denali via node package manager which will expose the `.scss` files. These give you the flexibility of building your application the way you see fit and utilize all Denali has to offer.
 
@@ -102,7 +116,7 @@ If you want to get started right away install denali dependencies (Denali-React,
 ```js
 import { DnButton } from '@denali-design/react'; //INFO: To load Denali-React component library
 import 'denali-css/css/denali.css'; // INFO: To load denali css
-import 'denali-icon-font/dist/denali-icon-font.css'; // INFO: To load denali icon font css
+import '@denali-design/icons/dist/font/denali-icons-font.css'; // INFO: To load denali icon font css
 import './css/site-denali-theme.css'; // INFO: To load denali them css
 
 function App() {
